# GradientMethod

./: README.md  readme.txt
v1_20201113/: CMakeLists.txt  optv2.cpp  vector.cpp  vector.h
